# RegistaDB

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  prometheus.yml
grafana/provisioning/dashboards/: dashboard_provider.yml
grafana/provisioning/dashboards/storage/: rocksdb_dashboard.json
java_client/: pom.xml
java_client/src/main/java/com/registadb/: Producer.java  RegistaClient.java  TestRegistaClient.java
java_client/src/main/java/com/registadb/builders/: EntryBuilder.java  EntryValueBuilder.java
java_client/src/main/java/com/registadb/readers/: EntryValueReader.java
java_client/src/test/java/com/registadb/: RegistaIntegrationTest.java
proto/: playbook.proto
regista_db/: CMakeLists.txt
regista_db/include/: MetricsExporter.hpp  RegistaServer.h  StorageManager.h
regista_db/include/api/: EntryController.h
regista_db/src/: MetricsExporter.cpp  RegistaServer.cpp  RegistaServer.h  StorageManager.cpp  StorageManager.h  main.cpp
regista_db/src/controllers/: EntryController.cpp
regista_db/tests/integration/: rest_test.cpp
regista_db/tests/unit/: regista_test.cpp  storage_test.cpp
static/app/docs/: openapi.yaml  swagger-initializer.js
